--- a/Collaborator/OwlEyes/Solution(s)/WWW/WWW/test-webm.html
+++ b/Collaborator/OwlEyes/Solution(s)/WWW/WWW/test-webm.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <video width="320" height="240" controls>
-        <source src="Heal the World.webm" type="video/webm">
+        <source src="Resource.ashx?Heal the World.webm" type="video/webm">
         Your browser does not support the video tag.
     </video>
 </body>
