--- a/Collaborator/OwlEyes/Solution(s)/WWW/WWW/test-webm.html
+++ b/Collaborator/OwlEyes/Solution(s)/WWW/WWW/test-webm.html
@@ -5,8 +5,8 @@
     <title></title>
 </head>
 <body>
-    <video width="320" height="240" controls>
-        <source src="Resource.ashx?Heal the World.webm" type="video/webm">
+    <video width="640" height="480" controls>
+        <source src="https://Virtual-World-Systems.net/Resource.ashx?Heal the World.webm" type="video/webm">
         Your browser does not support the video tag.
     </video>
 </body>
